styles/courses.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");

/* mini css reset */
html {
  font-size: 16px;
}

body,
h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  padding: 0;
  font-weight: normal;
}

img {
  max-width: 100%;
  height: auto;
}

* {
  box-sizing: border-box;
}

body {
  font-family: "Open Sans";
  background: linear-gradient(90deg, var(--bg-main) 15px, transparent 1%) center,
    linear-gradient(var(--bg-main) 15px, transparent 1%) center, var(--bg-dots);
  background-size: 16px 16px;
  margin: 0;
}

a {
  color: var(--text-links);
  text-decoration: none;
}

.navbar {
  border-bottom: 1px solid #ccc;
  position: fixed;
  width: 100%;
  top: 0;
  z-index: 10;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--bg-main);
  padding: 10px;
}

.navbar h1 {
  font-size: 20px;
  margin: inherit;
  padding: inherit;
  font-weight: bold;
  color: var(--text-main);
}

.navbar h2 {
  font-size: 14px;
  margin: inherit;
  margin-left: 15px;
  padding: inherit;
  text-transform: uppercase;
}

.navbar-info {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  color: var(--lesson-text);
}

header .cta-btn {
  display: none; /* only displays at large screen sizes */
}

.main .cta-btn {
  width: 90%;
  margin: 20px auto 0px auto;
  max-width: 500px;
  padding: 12px 20px;
}

.cta-btn {
  border-radius: 10px;
  background: var(--nav-buttons);
  color: var(--nav-buttons-text);
  padding: 7px 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.jumbotron {
  padding: 0;
}

.jumbotron .courseInfo,
.jumbotron .courseIcon {
  padding: 20px;
}

.jumbotron .courseInfo,
.jumbotron .courseIcon {
  text-align: center;
}

.author {
  margin-top: 40px;
  display: flex;
  justify-content: center;
}

@media (min-width: 1000px) {
  header .cta-btn {
    display: flex;
  }

  .main .cta-btn {
    display: none;
  }

  .jumbotron {
    display: flex;
    width: 100%;
    min-height: 45vh;
  }
  .jumbotron .courseInfo,
  .jumbotron .courseIcon {
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .jumbotron .courseInfo {
    width: 65%;
    text-align: right;
  }
  .jumbotron .courseIcon {
    width: 35%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .author {
    justify-content: flex-end;
  }
  .jumbotron .courseInfo-inner {
    max-width: 85%;
  }
}

.jumbotron h1,
.jumbotron h2 {
  color: var(--text-main-headers);
}

.jumbotron h1 {
  font-size: 50px;
  margin-bottom: 20px;
}

.jumbotron .courseInfo {
  background: var(--primary);
}

.jumbotron .courseIcon {
  background: var(--secondary);
}

.jumbotron .courseIcon img {
  max-width: 180px;
}

.author .info {
  padding: 10px;
}

.author .name {
  font-size: 18px;
  font-weight: bold;
  color: var(--text-main-headers);
}

.author .company {
  color: var(--text-main-headers);
  font-size: 16px;
}

.author .image {
  border-radius: 75px;
  overflow: hidden;
  height: 75px;
  width: 75px;
}

.navbar-brand.navbar-brand a {
  text-transform: uppercase;
  font-weight: bold;
  color: var(--text-main-headers);
}

.lesson-section-title {
  color: var(--text-main-headers);
}

.lesson-container {
  position: relative;
  max-width: 900px;
  margin: 0 auto 45px auto;
  padding: 10px 40px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  background-color: var(--bg-lesson);
  border-radius: 5px;
  margin-top: 40px;
}

.lesson {
  margin: 15px;
  padding: 15px;
  border-radius: 8px;
}

.lesson > h1 {
  color: var(--text-header);
  font-size: 24px;
}

.lesson h2 {
  font-size: 24px;
  margin-top: 20px;
  margin-bottom: 10px;
}

.lesson h2::after {
  content: "";
  display: block;
  height: 3px;
  margin-top: 5px;
  background: var(--text-header);
  max-width: 300px;
}

.lesson p {
  clear: both;
}

.lesson p,
.lesson li {
  line-height: 180%;
}

.lesson-links {
  font-size: 18px;
  padding: 15px 0;
}

.lesson li li {
  margin-left: 25px;
}

.next {
  float: right;
}

.prev {
  float: left;
}

.lesson-title {
  text-transform: uppercase;
  font-weight: bold;
}

.gatsby-highlight {
  padding: 4px;
  border-radius: 4px;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: stretch;
}

.lesson-content td {
  border: 1px solid var(--lesson-text);
  padding: 8px;
}

.lesson-content td input {
  min-width: 300px;
}

.lesson-content img {
  margin: 5px auto;
  display: block;
}

.lesson-flex {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.random-tweet {
  width: 100%;
  margin-top: 90px;
}

.fem-link {
  text-align: center;
}

.content-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 100vh;
  padding-top: 50px;
}

blockquote {
  padding: 15px;
  background-color: var(--emphasized-bg);
  border: 2px solid var(--emphasized-border);
  border-radius: 5px;
  width: 100%;
  margin: 10px 0;
}

blockquote > *:last-child {
  margin-bottom: 0;
}

blockquote > *:first-child {
  margin-top: 0;
}

.lesson-content img {
  max-width: 100%;
}

.main-card {
  max-width: 900px;
  margin: 0 auto;
  overflow: hidden;
}

.lesson-title {
  font-size: 20px;
  padding: 15px 30px;
}

.lesson-content {
  line-height: 1.5;
  color: var(--lesson-text);
}

.lesson-text {
  width: 100%;
  padding: 25px 5px 25px 35px;
  min-height: 200px;
}

.sections-name {
  margin: 0;
  padding: 0;
}

ol.sections-name {
  counter-reset: my-awesome-counter;
  list-style: none;
  padding-left: 40px;
  width: 98%;
  margin: 0;
  padding: 0;
}

ol.sections-name > li {
  counter-increment: my-awesome-counter;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  margin-bottom: 35px;
  width: 100%;
  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
}
ol.sections-name .lesson-preface {
  color: var(--icons);
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  background: var(--secondary);
  font-size: 100px;
  padding: 25px;
  width: 40%;
}

.lesson-preface.lesson-preface > svg {
  width: 80%;
  height: inherit;
  max-height: 100px;
}

ol.sections-name .lesson-preface::before {
  content: counter(my-awesome-counter);
  position: absolute;
  top: 0;
  left: 5px;
  font-size: 20px;
  font-weight: bold;
  color: var(--icons);
}

ol.sections-name .lesson-details {
  display: flex;
  flex-basis: 100%;
  flex: 1;
  background: var(--bg-lesson);
  position: relative;
}

.details-bg {
  --corner-fill: var(--corner-inactive);
  transition: fill 0.25s;
  width: 10%;
  height: 0;
  padding-bottom: 10%;
  background-size: cover;
  background-repeat: no-repeat;
  position: absolute;
  top: 0;
  right: 0;
}

.details-bg > svg {
  width: 100%;
  height: auto;
}

.details-bg > svg path {
  transition: fill 0.25s;
}

.lesson-details:hover .details-bg,
.lesson-container .details-bg {
  --corner-fill: var(--corner-active);
}

@media (min-width: 1000px) {
  ol.sections-name > li::before {
    border-bottom-left-radius: 5px;
    border-top-left-radius: 5px;
  }
  ol.sections-name .lesson-details {
    border-bottom-right-radius: 5px;
    border-top-right-radius: 5px;
  }
}

@media (max-width: 600px) {
  .lesson-container {
    padding: 2px;
  }

  ol.sections-name .lesson-preface {
    font-size: 60px;
  }
}

.lesson-details h3 {
  font-size: 22px;
  border-bottom: 1px solid var(--less);
  padding-bottom: 10px;
  display: inline-block;
  font-weight: bold;
  margin-bottom: 20px;
}

.lesson-links {
  margin-top: 45px;
  margin-bottom: 80px;
}

.lesson-links a {
  border-radius: 10px;
  background: var(--nav-buttons);
  color: var(--nav-buttons-text);
  padding: 15px 20px;
  display: inline-block;
  display: flex;
  justify-content: center;
  align-items: center;
}

.lesson-links a.prev {
  padding-left: 10px;
}

.lesson-links a.next {
  padding-right: 10px;
}

.cta-btn:hover,
.lesson-links a:hover {
  background: #152837;
  color: var(--nav-buttons-text-hover);
  text-decoration: none;
}

.lesson-links .arrow {
  font-size: 24px;
  line-height: 24px;
  padding: 0px 5px;
}

code,
pre code {
  padding: 0.5rem;
}

code,
pre code,
pre code.hljs {
  background-color: var(--emphasized-bg);
  color: #000;
  padding-right: 3rem;
}

pre code,
pre code.hljs {
  display: block;
  text-wrap: auto;
}

pre {
  position: relative;
}

.copy-btn {
  position: absolute;
  top: 0;
  right: 0;
  color: var(--text-main);
  background: var(--highlight);
  border: 1px solid var(--code-border);
  padding: 0.35em 0.65em;
  cursor: pointer;
  border-radius: 0.25em;
}

.copy-btn:hover {
  background: oklch(from var(--highlight) calc(l + 0.02) c h);
}

